fix ios docs sidebar overflow issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,7 @@
     @media screen and (max-width: 1023px) {
         body {
             overflow-x: hidden;
+            max-width:100vw;
         }
     }
 
